--- a/latex/main.tex
+++ b/latex/main.tex
@@ -474,7 +474,7 @@ Hvis testdeltagerne bevæger pegeenheden uden for det canvas som opgaven skal ud
 \addcontentsline{toc}{subsection}{Laboratorieeksperiment}
 \subsection*{Laboratorieeksperiment}
 Laboratorieeksperimentet vil blive udført af 10 tilfældigt udvalgte universitetsstuderende - dog ikke dataloger.
-Forsøget foretages fra kl 9-13 - tidligt på dagen - for at sikre, at folk stadig er friske. Det vil foregå i en 4-personers sofabås på H.C. Ørstedinstituttet, hvor der er privat og få forstyrrelser.
+Forsøget foretages fra kl 9-13 - tidligt på dagen - for at sikre, at folk stadig er friske. Det vil foregå i en 4-personers sofabås på H.C. Ørsted instituttet, hvor der er privat og få forstyrrelser.
 
 Der vil være afsat 20 minutter til hver deltager, dog med plads til ekstra tid hvis nødvendigt. For at sikre os, at forsøgene forløber korrekt og ensartet har vi udarbejdet en drejebog, der kan ses i bilag \ref{sec:drejebog}. Hver deltager bliver først introduceret til vores projekt og derefter introduceret til henholdsvis tunnel-, spiral- og pegeopgaven.
 
@@ -511,7 +511,7 @@ Vi vil også dele forsøget på vores egne Facebook-profiler. Teksten som vi bru
 
 \addcontentsline{toc}{subsection}{Laboratorieeksperiment}
 \subsection*{Laboratorieeksperiment}
-Vi, P1, P2 og P3, udførte vores laboratorieeksperiment den 20. april 2015 på H.C. Ørsted instituttet. På trods af, at der på dagen ikke var mange mennesker til stede, fik vi alligevel 10 personer igennem vores eksperiment i løbet af fire timer. De 10 testdeltagere var af varierende nationalitet, og begge køn var repræsenteret. Alle testdeltagere blev hvervet af P1 og blev derefter introduceret til eksperimentet af enten P2 eller P3. Herefter udførte alle testdeltagere forsøget uden behov for yderlig assistance. Testdeltagerne syntes godt om forsøget. Alt i alt forløb vores forsøg som forventet, uden problemer eller forstyrrelser.
+Vi, P1, P2 og P3, udførte vores laboratorieeksperiment den 20. april 2015 på H.C. Ørsted instituttet. På trods af, at der på dagen ikke var mange mennesker til stede, fik vi alligevel 10 personer igennem vores eksperiment i løbet af fire timer. De 10 testdeltagere var af varierende nationalitet, og begge køn var repræsenteret. Alle testdeltagere blev hvervet af P1 og blev derefter introduceret til eksperimentet af enten P2 eller P3. Herefter udførte alle testdeltagere forsøget uden behov for yderlig assistance. Testdeltagerne syntes godt om forsøget. Alt i alt forløb vores forsøg uden problemer eller forstyrrelser.
 
 \addcontentsline{toc}{subsection}{Crowdsourcingeksperiment}
 \subsection*{Crowdsourcingeksperiment}
