--- a/latex/main.tex
+++ b/latex/main.tex
@@ -511,7 +511,7 @@ Vi vil også dele forsøget på vores egne Facebook-profiler. Teksten som vi bru
 
 \addcontentsline{toc}{subsection}{Laboratorieeksperiment}
 \subsection*{Laboratorieeksperiment}
-Vi, P1, P2 og P3, udførte vores laboratorieeksperiment den 20. april 2015 på H.C. Ørsted instituttet. På trods af, at der på dagen ikke var mange mennesker til stede, fik vi alligevel 10 personer igennem vores eksperiment i løbet af fire timer. De 10 testdeltagere var af varierende nationalitet, og begge køn var repræsenteret. Alle testdeltagere blev hvervet af P1 og blev derefter introduceret til eksperimentet af enten P2 eller P3. Herefter udførte alle testdeltagere forsøget uden behov for yderlig assistance. Testdeltagerne syntes godt om forsøget. Alt i alt forløb vores forsøg uden problemer eller forstyrrelser.
+Vi, P1, P2 og P3, udførte vores laboratorieeksperiment den 20. april 2015 på H.C. Ørsted instituttet. På trods af, at der på dagen ikke var mange mennesker til stede, fik vi alligevel 10 personer igennem vores eksperiment i løbet af fire timer. De 10 testdeltagere var af varierende nationalitet, og begge køn var repræsenteret. Alle testdeltagere blev hvervet af P1 og blev derefter introduceret til eksperimentet af enten P2 eller P3. Herefter udførte alle testdeltagere forsøget uden behov for yderlig assistance. Testdeltagerne syntes godt om forsøget, og forsøget forløb uden problemer eller forstyrrelser.
 
 \addcontentsline{toc}{subsection}{Crowdsourcingeksperiment}
 \subsection*{Crowdsourcingeksperiment}
