--- a/latex/main.tex
+++ b/latex/main.tex
@@ -525,7 +525,7 @@ Vi har ved bachelorprojektets aflevering igen åbnet for adgang til forsøgsside
 
 \addcontentsline{toc}{chapter}{Analyse}
 \chapter*{Analyse}
-I dette afsnit vil vi analysere den indsamlede data ved brug af både kvantitative og kvalitative metoder. Mere præcist vil vi analysere testdeltagernes bevægelsesbaner og hastighedsprofiler. Afsnittet modeludvælgelse vil kun blive gennemgået kursorisk.
+I dette afsnit vil vi analysere den indsamlede data ved brug af både kvantitative og kvalitative metoder. Mere præcist vil vi analysere testdeltagernes bevægelsesbaner og hastighedsprofiler. Afsnittet \textit{Modeludvælgelse} vil kun blive gennemgået kursorisk.
 
 Den tilsvarende R-kode som er brugt til analysen, kan findes i vores bilag.
 \addcontentsline{toc}{section}{Modeludvælgelse}
