--- a/latex/main.tex
+++ b/latex/main.tex
@@ -527,7 +527,7 @@ Vi har ved bachelorprojektets aflevering igen åbnet for adgang til forsøgsside
 \chapter*{Analyse}
 I dette afsnit vil vi analysere den indsamlede data ved brug af både kvantitative og kvalitative metoder. Mere præcist vil vi analysere testdeltagernes bevægelsesbaner og hastighedsprofiler. Afsnittet \textit{Modeludvælgelse} vil kun blive gennemgået kursorisk.
 
-Den tilsvarende R-kode, som er brugt til analysen, kan findes i vores bilag.
+Den tilsvarende R-kode, som er brugt til analysen, kan findes i vores bilag \ref{r-code}.
 \addcontentsline{toc}{section}{Modeludvælgelse}
 \section*{Modeludvælgelse}
 Som det kan ses af de fire formuleringer for Fitts' lov, kan de alle fire opfattes som affine modeller, med tiden $T$ som y-variabel og ID som x-variabel. Bemærk, at Welfords formel har en skæring med y-aksen i 0, dvs. $y=b\cdot x$.
