--- a/latex/main.tex
+++ b/latex/main.tex
@@ -530,7 +530,7 @@ I dette afsnit vil vi analysere den indsamlede data ved brug af både kvantitati
 Den tilsvarende R-kode, som er brugt til analysen, kan findes i bilag \ref{sec:r-code}.
 \addcontentsline{toc}{section}{Modeludvælgelse}
 \section*{Modeludvælgelse}
-Som det kan ses af de fire formuleringer for Fitts' lov, kan de alle fire opfattes som affine modeller, med tiden $T$ som y-variabel og ID som x-variabel. Bemærk, at Welfords formel har en skæring med y-aksen i 0, dvs. $y=b\cdot x$.
+Som det kan ses af de fire formuleringer for Fitts' lov, kan alle fire opfattes som affine modeller, med tiden $T$ som y-variabel og ID som x-variabel. Bemærk, at Welfords formel har en skæring med y-aksen i 0, dvs. $y=b\cdot x$.
 
 For at kunne finde ud af, hvilken af de fire lineære modeller der beskriver vores data bedst, har vi taget udgangspunkt i \cite{wu2011experiments}, der refererer til tre modeludvælgelseskriterier som værende almindeligt anvendte.
 
