--- a/latex/main.tex
+++ b/latex/main.tex
@@ -532,7 +532,7 @@ Den tilsvarende R-kode, som er brugt til analysen, kan findes i bilag \ref{sec:r
 \section*{Modeludvælgelse}
 Som det kan ses af de fire formuleringer for Fitts' lov, kan alle fire opfattes som affine modeller, med tiden $T$ som y-variabel og ID som x-variabel. Bemærk, at Welfords formel har en skæring med y-aksen i 0, dvs. $y=b\cdot x$.
 
-For at kunne finde ud af, hvilken af de fire affine modeller der beskriver vores data bedst, har vi taget udgangspunkt i \cite{wu2011experiments}, der refererer til tre modeludvælgelseskriterier som værende almindeligt anvendte.
+For at kunne finde ud af, hvilken af de fire affine modeller, der beskriver vores data bedst, har vi taget udgangspunkt i \cite{wu2011experiments}, der refererer til tre modeludvælgelseskriterier som værende almindeligt anvendte.
 
 I \cite{wu2011experiments} afsnit 1.7 bliver $C_p$, $AIC$ og $BIC$ beskrevet som almindeligt anvendte, og der bliver refereret til Ockham's Razor som værende et godt udgangspunkt ved modeludvælgelse, da det oftest er den simpleste model der passer bedst. Dette har vi brugt til selv at vælge $LSE$, da denne er simpel, og derfor er understøttet som metode, af Ockham's Razor.
 \begin{itemize}
