--- a/latex/main.tex
+++ b/latex/main.tex
@@ -534,7 +534,7 @@ Som det kan ses af de fire formuleringer for Fitts' lov, kan alle fire opfattes 
 
 For at kunne finde ud af, hvilken af de fire affine modeller, der beskriver vores data bedst, har vi taget udgangspunkt i \cite{wu2011experiments}, som refererer til tre modeludvælgelseskriterier som værende almindeligt anvendte.
 
-I \cite{wu2011experiments} afsnit 1.7 bliver $C_p$, $AIC$ og $BIC$ beskrevet som almindeligt anvendte, og der bliver refereret til Ockham's Razor som værende et godt udgangspunkt ved modeludvælgelse, da det oftest er den simpleste model der passer bedst. Dette har vi brugt til selv at vælge $LSE$, da denne er simpel, og derfor er understøttet som metode, af Ockham's Razor.
+I \cite{wu2011experiments} afsnit 1.7 bliver $C_p$, $AIC$ og $BIC$ beskrevet som almindeligt anvendte, og der bliver refereret til Occham's Razor som værende et godt udgangspunkt ved modeludvælgelse, da det oftest er den simpleste model der passer bedst. Dette har vi brugt til selv at vælge $LSE$, da denne er simpel, og derfor er understøttet som metode af Occham's Razor.
 \begin{itemize}
 \item{Least Squared Errors (LSE) \cite{legendre1805}.}
 \item{Mallow's $C_p$ \cite{mallow1973}.}
