--- a/latex/main.tex
+++ b/latex/main.tex
@@ -536,10 +536,10 @@ For at kunne finde ud af, hvilken af de fire affine modeller, der beskriver vore
 
 I \cite{wu2011experiments} afsnit 1.7 bliver $C_p$, $AIC$ og $BIC$ beskrevet som almindeligt anvendte, og der bliver refereret til Occham's Razor som værende et godt udgangspunkt ved modeludvælgelse, da det oftest er den simpleste model der passer bedst. Dette har vi brugt til selv at vælge $LSE$, da denne er simpel, og derfor er understøttet som metode af Occham's Razor.
 \begin{itemize}
-\item{Least Squared Errors (LSE) \cite{legendre1805}.}
-\item{Mallow's $C_p$ \cite{mallow1973}.}
-\item{Akaike Information Criterion (AIC) \cite{akaike1973}.}
-\item{Bayesian Information Criterion (BIC) \cite{schwarz1978}.}
+\item{Least Squared Errors (LSE) \cite{legendre1805}}
+\item{Mallow's $C_p$ \cite{mallow1973}}
+\item{Akaike Information Criterion (AIC) \cite{akaike1973}}
+\item{Bayesian Information Criterion (BIC) \cite{schwarz1978}}
 \end{itemize}
 LSE er bestemt ved at finde gennemsnittet af kvadratet på afstandene fra punkterne til modellen, den model som har det laveste gennemsnit bliver vurderet som bedst. Et problem ved udelukkende at benytte dette kriterium er, at en model altid kan beskrive alle datapunkter perfekt ved blot at inkludere flere parametre. Således, at modellen bliver et polynomium af højere grad end det originale, dette kaldes overfitting.
 
