--- a/latex/main.tex
+++ b/latex/main.tex
@@ -543,7 +543,7 @@ I \cite{wu2011experiments} afsnit 1.7 bliver $C_p$, $AIC$ og $BIC$ beskrevet som
 \end{itemize}
 LSE beregnes ved at finde gennemsnittet af kvadratet på afstandene fra punkterne til modellen. Den model som har det laveste gennemsnit bliver vurderet som bedst. Et problem ved udelukkende at benytte dette kriterium er, at en model altid kan beskrive alle datapunkter perfekt ved blot at inkludere flere parametre. Således, at modellen bliver et polynomium af højere grad end det originale. Dette er overfitting.
 
-Mallow's $C_p$ kriteriet bliver beregnet ud fra LSE men inddrager også antallet af parametre i beregningen for netop at undgå overfitting. Tilsvarende gør sig gældende for AIC og BIC, de beregnes dog ved hjælp af maximum likelihood i stedet for LSE.
+Mallow's $C_p$-kriteriet bliver beregnet ud fra LSE men inddrager også antallet af parametre i beregningen for netop at undgå overfitting. Tilsvarende gør sig gældende for AIC og BIC, de beregnes dog ved hjælp af maximum likelihood i stedet for LSE.
 
 For et givent datasæt $x$ og en tilhørende statistisk model vil likelihoodfunktionen beregne sandsynligheden for, at modellens parametre $p$ vil resultere i $x$. Ved maximum likelihood findes den værdi for  $p$, som maksimerer likelihood funktionen. \textit{"Det vil sige den v{\ae}rdi af  p der gør den observerede v{\ae}rdi x mest sandsynlig"} \cite{ditlevsen2011}. Forskellen på AIC og BIC er, at BIC vægter antallet af parametre mere negativt end AIC.
 
