--- a/latex/main.tex
+++ b/latex/main.tex
@@ -547,7 +547,7 @@ Mallow's $C_p$-kriteriet bliver beregnet ud fra LSE men inddrager også antallet
 
 For et givent datasæt $x$ og en tilhørende statistisk model vil likelihoodfunktionen beregne sandsynligheden for, at modellens parametre $p$ vil resultere i $x$. Ved maximum likelihood findes den værdi for  $p$, som maksimerer likelihood funktionen. \textit{"Det vil sige den v{\ae}rdi af  p der gør den observerede v{\ae}rdi x mest sandsynlig"} \cite[s.14]{ditlevsen2011}. Forskellen på AIC og BIC er, at BIC vægter antallet af parametre mere negativt end AIC.
 
-Af de fire beskrevne modeller har vi valgt at bruge AIC, da det er den mest udbredte at basere sin modeludvælgelse på. Hvis vi lader $L$ være maximum likelihood-værdierne for modellens parametre og $k$ antallet af parametre, så er AIC givet ved
+Af de fire beskrevne modeller har vi valgt at bruge AIC, da det er den mest udbredte. Hvis vi lader $L$ være maximum likelihood-værdierne for modellens parametre og $k$ antallet af parametre, så er AIC givet ved
 \begin{align}
 AIC = 2k - 2\ln(L) \label{eq:aic}
 \end{align}
