--- a/latex/main.tex
+++ b/latex/main.tex
@@ -577,8 +577,7 @@ Vi har derfor fjernet alle datapunkter, som afviger med mere end 3 gange standar
 \end{minipage}
 
 \newpage
-På baggrund af de affine linjers overenstemmelse med datapunkterne fra det kontrollerede eksperiment forventer vi, at dataene fra vores ukontrollerede forsøg også kan beskrives af de fire formuleringer. Vi vil derfor analysere de fire formuleringer af Fitts' lov med vores data fra det ukontrollerede crowdsourcing forsøg. Vores analyse vil basere sig på et filtreret datasæt ved den ovennævnte $\sigma$ metode, så eventuelle perifære data ikke medtages. I resten af analysen vil de 264 testdeltageres opgaver betyde den filtrerede del af det fulde datasæt.
-
+På baggrund af de affine linjers overenstemmelse med datapunkterne fra det kontrollerede eksperiment forventer vi, at dataene fra vores ukontrollerede forsøg også kan beskrives af de fire formuleringer. Vi vil derfor analysere de fire formuleringer af Fitts' lov med vores data fra det ukontrollerede crowdsourcingforsøg. Vores analyse vil basere sig på et filtreret datasæt ved den ovennævnte $\sigma$-metode, så eventuelle perifære data ikke medtages. I resten af analysen vil de 264 testdeltageres opgaver betyde den filtrerede del af det fulde datasæt.\\\\
 \begin{minipage}{\linewidth}
 	\begin{minipage}[t]{0.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_test_comparison_unfiltered}
