--- a/latex/main.tex
+++ b/latex/main.tex
@@ -589,7 +589,7 @@ På baggrund af de affine linjers overenstemmelse med datapunkterne fra det kont
 	\end{minipage}
 	\begin{minipage}[t]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_test_comparison_filtered}
-		\captionof{figure}{Testdeltager 7's 25 pegeopgavedata med filtreret datasæt. Kun 24 datapunkter tilbage}
+		\captionof{figure}{Testdeltager 7's 25 pegeopgavedata med filtreret datasæt. Bemærk, at der kun er 24 datapunkter tilbage}
 		\label{fig:testdeltager7filter}
 	\end{minipage}
 \end{minipage}
