--- a/latex/main.tex
+++ b/latex/main.tex
@@ -596,7 +596,7 @@ På baggrund af de affine linjers overenstemmelse med datapunkterne fra det kont
 
 \addcontentsline{toc}{section}{Modelanalyse af pegeopgaver}
 \section*{Modelanalyse af pegeopgaver}
-Vores modelanalyse af pegeopgaver tager udgangspunkt i AIC-modellen og de bevægelsesbaner der er indsamlet ved crowdsourcingdeltagernes udførsel af opgaverne.
+Vores modelanalyse af pegeopgaver tager udgangspunkt i AIC-modellen og de datapunkter der er indsamlet ved crowdsourcingdeltagernes udførsel af opgaverne.
 
 Hver af de fire formuleringer af Fitts' lov har vi tilpasset til vores data fra de 264 testdeltageres pegeopgaver ved lineær regression ved R's $lm()$ funktion. Til hver af modellerne har vi gjort brug af formuleringernes respektive $ID$ som $x$-koordinat og tiden, $t$, det tog testdeltageren at løse en pågældende pegeopgave som $y$-koordinat. De fire matematiske modeller med de tilpassede konstanter er vist nedenfor.
 \begin{align*}
