--- a/latex/main.tex
+++ b/latex/main.tex
@@ -608,7 +608,7 @@ Hver af de fire formuleringer af Fitts' lov har vi tilpasset til vores data fra 
 
 Bemærk, at den additive konstant er målt i millisekunder ligesom vores registrerede tider fra datasættet. Ud fra de tre additive konstanter, kan det ses, at testdeltagerne i gennemsnit bruger cirka 450 millisekunder på at opfange opgaven før de bevæger deres pegeenhed. Datapunkterne og de fire affine modeller er plottet og vist i figur \ref{fig:welford_affine_line}, \ref{fig:fitt_affine_line}, \ref{fig:meyer_affine_line} og \ref{fig:mackenzie_affine_line}. Hvert datapunkt er én testdeltagers tid ved en given opgaves $ID$. Bemærk, hvordan datapunkterne danner 25 vertikale 'søjler', én for hvert af vores pegeopgavers $ID$.
 
-Det er de fire matematiske modeller som vores pegeopgaveanalyse vil tage udgangspunkt i. Ud fra modellerne og figurerne er det dog svært at sige noget om, hvilken af modellerne der klarer sig bedst i at beskrive datapunkterne. For at få et mere håndgribeligt resultat at analysere dette ud fra, vil vi gøre brug af en AIC sammenligning og underbygge den med en residualanalyse.\\\\\begin{minipage}{\linewidth}
+Det er de fire matematiske modeller som vores pegeopgaveanalyse vil tage udgangspunkt i. Ud fra modellerne og figurerne er det dog svært at sige noget om, hvilken af modellerne der klarer sig bedst i at beskrive datapunkterne. For at få et mere håndgribeligt resultat at analysere dette ud fra, vil vi gøre brug af en AIC-analyse og underbygge den med en residualanalyse.\\\\\begin{minipage}{\linewidth}
 	\begin{minipage}[b]{0.45\linewidth}
 		\captionof{figure}{Welford's lineære model med hans $ID$ ud af $x$-aksen og tiden ud af $y$-aksen}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_welford}
