--- a/latex/main.tex
+++ b/latex/main.tex
@@ -606,7 +606,7 @@ Hver af de fire formuleringer af Fitts' lov har vi tilpasset til vores data fra 
 \text{Meyer's: } &T = 504.48 + 157.13 \cdot \sqrt{\frac{A}{W}}
 \end{align*}
 
-Bemærk, at den additive konstant er målt i millisekunder ligesom vores registrerede tider fra datasættet. Ud fra de tre additive konstanter, kan det ses, at testdeltagerne i gennemsnit bruger cirka 450 millisekunder på at opfange opgaven før de bevæger deres pegeenhed. Datapunkterne og de fire affine modeller er plottet og vist i figur \ref{fig:welford_affine_line}, \ref{fig:fitt_affine_line}, \ref{fig:meyer_affine_line} og \ref{fig:mackenzie_affine_line}. Hvert datapunkt er én testdeltagers tid ved en given opgaves $ID$. Bemærk, hvordan datapunkterne danner 25 vertikale 'søjler', én for hvert af vores pegeopgavers $ID$.
+Bemærk, at den additive konstant er målt i millisekunder lige som vores registrerede tider fra datasættet. Ud fra de tre additive konstanter, kan det ses, at testdeltagerne i gennemsnit bruger cirka 450 millisekunder på at opfange opgaven før de bevæger deres pegeenhed. Datapunkterne og de fire affine modeller er plottet og vist i figur \ref{fig:welford_affine_line}, \ref{fig:fitt_affine_line}, \ref{fig:meyer_affine_line} og \ref{fig:mackenzie_affine_line}. Hvert datapunkt er én testdeltagers tid ved en given opgaves $ID$. Bemærk, hvordan datapunkterne danner 25 vertikale 'søjler', én for hvert af vores pegeopgavers $ID$.
 
 Det er de fire matematiske modeller som vores pegeopgaveanalyse vil tage udgangspunkt i. Ud fra modellerne og figurerne er det dog svært at sige noget om, hvilken af modellerne der klarer sig bedst i at beskrive datapunkterne. For at få et mere håndgribeligt resultat at analysere dette ud fra, vil vi gøre brug af en AIC-analyse og underbygge den med en residualanalyse.\\\\\begin{minipage}{\linewidth}
 	\begin{minipage}[b]{0.45\linewidth}
@@ -639,7 +639,7 @@ Det er de fire matematiske modeller som vores pegeopgaveanalyse vil tage udgangs
 
 \addcontentsline{toc}{subsection}{AIC-analyse}
 \subsection*{AIC-analyse}
-AIC anslår kvaliteten af hver model, relativt til hver af de andre modeller. Hvilket vil sige, at AIC ikke kan sige noget om kvaliteten af en model i absolut forstand, og derfor ikke kan vurdere hvor godt en model passer på dataen - kun den relative kvalitet af modellerne.
+AIC-metoden anslår kvaliteten af hver model, relativt til hver af de andre modeller. Hvilket vil sige, at AIC ikke kan sige noget om kvaliteten af en model i absolut forstand, og derfor ikke kan vurdere hvor godt en model passer på dataen - kun den relative kvalitet af modellerne.
 
 Tabel \ref{tab:table_analysis_aic1} viser AIC-værdier for de fire modeller tilpasset alle testdeltageres pegeopgaver, og den relative forskel imellem dem. Eftersom den absolute AIC-værdi ikke i sig selv siger noget, kigger vi kun på forskellen mellem dem. Tabel \ref{tab:table_analysis_aic2} viser AIC-værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer, imens tabel \ref{tab:table_analysis_aic3} viser den relative forskel i mellem de fire modellers AIC-værdier for de samme personer.
 
