--- a/latex/main.tex
+++ b/latex/main.tex
@@ -639,7 +639,7 @@ Det er de fire matematiske modeller som vores pegeopgaveanalyse vil tage udgangs
 
 \addcontentsline{toc}{subsection}{AIC-analyse}
 \subsection*{AIC-analyse}
-AIC-metoden anslår kvaliteten af hver model, relativt til hver af de andre modeller. Hvilket vil sige, at AIC ikke kan sige noget om kvaliteten af en model i absolut forstand, og derfor ikke kan vurdere hvor godt en model passer på dataen - kun den relative kvalitet af modellerne.
+AIC-metoden anslår kvaliteten af hver model, relativt til hver af de andre modeller. Hvilket vil sige, at AIC-metoden ikke kan sige noget om kvaliteten af en model i absolut forstand, og derfor ikke kan vurdere hvor godt en model passer på dataene - kun den relative kvalitet af modellerne.
 
 Tabel \ref{tab:table_analysis_aic1} viser AIC-værdier for de fire modeller tilpasset alle testdeltageres pegeopgaver, og den relative forskel imellem dem. Eftersom den absolute AIC-værdi ikke i sig selv siger noget, kigger vi kun på forskellen mellem dem. Tabel \ref{tab:table_analysis_aic2} viser AIC-værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer, imens tabel \ref{tab:table_analysis_aic3} viser den relative forskel i mellem de fire modellers AIC-værdier for de samme personer.
 
