--- a/latex/main.tex
+++ b/latex/main.tex
@@ -641,9 +641,9 @@ Det er de fire matematiske modeller som vores pegeopgaveanalyse vil tage udgangs
 \subsection*{AIC-analyse}
 AIC-metoden anslår kvaliteten af hver model, relativt til hver af de andre modeller. Hvilket vil sige, at AIC-metoden ikke kan sige noget om kvaliteten af en model i absolut forstand, og derfor ikke kan vurdere hvor godt en model passer på dataene - kun den relative kvalitet af modellerne.
 
-Tabel \ref{tab:table_analysis_aic1} viser AIC-værdier for de fire modeller tilpasset alle testdeltageres pegeopgaver, og den relative forskel imellem dem. Eftersom den absolute AIC-værdi ikke i sig selv siger noget, kigger vi kun på forskellen mellem dem. Tabel \ref{tab:table_analysis_aic2} viser AIC-værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer, imens tabel \ref{tab:table_analysis_aic3} viser den relative forskel i mellem de fire modellers AIC-værdier for de samme personer.
+Tabel \ref{tab:table_analysis_aic1} viser AIC-værdier for de fire modeller tilpasset alle testdeltageres pegeopgaver, og den relative forskel imellem dem. Eftersom den absolute AIC-værdi ikke i sig selv siger noget, kigger vi kun på forskellen mellem dem. Tabel \ref{tab:table_analysis_aic2} viser AIC-værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer, mens tabel \ref{tab:table_analysis_aic3} viser den relative forskel imellem de fire modellers AIC-værdier for de samme personer.
 
-Den relative forskel imellem modellerne beskriver vi ved $\Delta_i$, hvilket er beregnet som forskellen i mellem AIC værdien for den $i$'te model og AIC værdien for modellen med den mindste AIC værdi, se ligning \ref{eq:delta_aic}. Denne måde at beregne de relative forskelle er foreslået i \cite{burnham2004}.
+Den relative forskel mellem modellerne beskriver vi ved $\Delta_i$, hvilket er beregnet som forskellen i mellem AIC værdien for den $i$'te model og AIC værdien for modellen med den mindste AIC værdi, se (\ref{eq:delta_aic}). Denne måde at beregne de relative forskelle er foreslået i \cite{burnham2004}.
 \begin{align}
 \Delta_i = AIC_i - AIC_{min}
 \label{eq:delta_aic}
