--- a/latex/main.tex
+++ b/latex/main.tex
@@ -643,7 +643,7 @@ AIC-metoden anslår kvaliteten af hver model, relativt til hver af de andre mode
 
 Tabel \ref{tab:table_analysis_aic1} viser AIC-værdier for de fire modeller tilpasset alle testdeltageres pegeopgaver, og den relative forskel imellem dem. Eftersom den absolute AIC-værdi ikke i sig selv siger noget, kigger vi kun på forskellen mellem dem. Tabel \ref{tab:table_analysis_aic2} viser AIC-værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer, mens tabel \ref{tab:table_analysis_aic3} viser den relative forskel imellem de fire modellers AIC-værdier for de samme personer.
 
-Den relative forskel mellem modellerne beskriver vi ved $\Delta_i$, hvilket er beregnet som forskellen i mellem AIC værdien for den $i$'te model og AIC værdien for modellen med den mindste AIC værdi, se (\ref{eq:delta_aic}). Denne måde at beregne de relative forskelle er foreslået i \cite{burnham2004}.
+Den relative forskel mellem modellerne beskriver vi ved $\Delta_i$, hvilket er beregnet som forskellen imellem AIC-værdien for den $i$'te model og AIC-værdien for modellen med den mindste AIC-værdi, se (\ref{eq:delta_aic}). Denne måde at beregne de relative forskelle er foreslået i \cite{burnham2004}.
 \begin{align}
 \Delta_i = AIC_i - AIC_{min}
 \label{eq:delta_aic}
