--- a/latex/main.tex
+++ b/latex/main.tex
@@ -650,7 +650,7 @@ Den relative forskel mellem modellerne beskriver vi ved $\Delta_i$. Hvilket er b
 \end{align} 
 De $\Delta$-værdier, som fremkommer af denne beregning vil være den information der mistes, ved at bruge en model fremfor en anden \cite{burnham2004}. Modeller med $\Delta_i \leq 2$ vil ikke kunne afskrives at kunne være lige så beskrivende som modellen med $AIC_{min}$, imens modeller med $\Delta_i > 10$ godt kan udelukkes fra fremtidige analyser af de pågældende data. Modeller med $4 \leq \Delta_i \leq 7$ kan ikke udelades, men kan heller ikke erstatte modellen med $AIC_{min}$ til fulde \cite{burnham2004}.
 
-De indbyrdes forskelle i tabel \ref{tab:table_analysis_aic1} er alle over 10 og vi kan derfor konkludere, at Meyer's formulering beskriver den indsamlede data bedst. Forskellene for de 10 tilfældigt udvalgte personer, som ses i tabel \ref{tab:table_analysis_aic3}, ligger generelt lavere end forskellene i tabel \ref{tab:table_analysis_aic1}. For de fleste af personerne har Meyer's, MacKenzie's og Fitts' en forskel, som er mindre end eller lig med 2, hvilket gør at de beskriver den indsamlede data lige godt. Forskellene for Welford's formulering er generelt højere, dog kun få over 10, hvilket gør, at vi ikke kan udelukke den som værende mere beskrivende for vores data, men at den ikke beskriver vores data så præcist som de tre andre. 
+De indbyrdes forskelle i tabel \ref{tab:table_analysis_aic1} er alle over 10 og vi kan derfor beskrive Meyer's formulering, som den formulering, der beskriver vores data bedst. Forskellene for de 10 tilfældigt udvalgte personer, som ses i tabel \ref{tab:table_analysis_aic3}, ligger generelt lavere end forskellene i tabel \ref{tab:table_analysis_aic1}. For de fleste af personerne har Meyer's, MacKenzie's og Fitts' en forskel, som er mindre end eller lig med 2, hvilket gør at de beskriver den indsamlede data lige godt. Forskellene for Welford's formulering er generelt højere, dog kun få over 10, hvilket gør, at vi ikke kan udelukke den som værende mere beskrivende for vores data, men at den ikke beskriver vores data så præcist som de tre andre. 
 
 \begin{table}[h]
 \centering
