--- a/latex/main.tex
+++ b/latex/main.tex
@@ -661,7 +661,7 @@ Mackenzie & 92763.02 & 34.64 \\
 Fitts 	  & 92804.17 & 75.79 \\
 Welford   & 94510.34 & 1781.96
 \end{tabular}
-\caption{AIC værdier for alle personers pegeopgaver og indbyrdes forskel med udgangspunkt i Meyers som nulpunkt}
+\caption{AIC-værdier for alle personers pegeopgaver og indbyrdes forskel med udgangspunkt i Meyers som nulpunkt}
 \label{tab:table_analysis_aic1}
 \end{table}
 
@@ -680,7 +680,7 @@ Person & Meyer  & MacKenzie & Fitts  & Welford \\\hline
 255    & 355.91 & 356.39    & 356.76 & 355.85  \\
 59     & 360.84 & 360.66    & 360.79 & 365.70
 \end{tabular}
-\caption{AIC værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer}
+\caption{AIC-værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer}
 \label{tab:table_analysis_aic2}
 \end{table}
 
