--- a/latex/main.tex
+++ b/latex/main.tex
@@ -661,7 +661,7 @@ Mackenzie & 92763.02 & 34.64 \\
 Fitts 	  & 92804.17 & 75.79 \\
 Welford   & 94510.34 & 1781.96
 \end{tabular}
-\caption{AIC-værdier for alle personers pegeopgaver og indbyrdes forskel med udgangspunkt i Meyers som nulpunkt}
+\caption{AIC-værdier for alle personers pegeopgaver og indbyrdes forskel med udgangspunkt i Meyer's som nulpunkt}
 \label{tab:table_analysis_aic1}
 \end{table}
 
