--- a/latex/main.tex
+++ b/latex/main.tex
@@ -699,7 +699,7 @@ Person & Meyer  & MacKenzie & Fitts  & Welford \\\hline
 255    & 0.06   & 0.54      & 0.91   & 0       \\
 59     & 0.18   & 0         & 0.13   & 5.04
 \end{tabular}
-\caption{Indbyrdes forskel mellem AIC-værdierne for 10 tilfældigt udvalgte personer. Forskellen er udregnet med udgangspunkt i den model med lavest AIC-værdi.}
+\caption{Indbyrdes forskel mellem AIC-værdierne for 10 tilfældigt udvalgte personer. Forskellen er udregnet med udgangspunkt i den model med lavest AIC-værdi}
 \label{tab:table_analysis_aic3}
 \end{table}
 
