--- a/latex/main.tex
+++ b/latex/main.tex
@@ -699,7 +699,7 @@ Person & Meyer  & MacKenzie & Fitts  & Welford \\\hline
 255    & 0.06   & 0.54      & 0.91   & 0       \\
 59     & 0.18   & 0         & 0.13   & 5.04
 \end{tabular}
-\caption{Indbyrdes forskel mellem AIC-værdierne for 10 tilfældigt udvalgte personer. Forskellen er udregnet med udgangspunkt i den model med lavest AIC-værdi}
+\caption{Indbyrdes forskel mellem AIC-værdierne for 10 tilfældigt udvalgte personer. Forskellen er udregnet med udgangspunkt i modellen med lavest AIC-værdi}
 \label{tab:table_analysis_aic3}
 \end{table}
 
@@ -711,7 +711,7 @@ På figur \ref{fig:plot_residual_fitt}, \ref{fig:plot_residual_welford}. \ref{fi
 
 Når vi kigger på de fire residualplot, så viser de samme resultater som AIC-analysen. Welford's residualplot viser, at modellen passer dårligt på den indsamlede data. Fitt's og MacKenzie's ligner hinanden meget, mens Meyer's er den model der giver det bedste fit til den indsamlede data.
 
-Det ses af figur \ref{fig:plot_residual_welford}, at Welford's især er dårligere ved lavere værdier af $ID$. Grunden til dette skal findes i, at Welford's ikke har det additive $a$-led. Som Welford \cite{welford1968} selv forklarer, så vil det manglende $a$-led ikke gøre stor forskel ved større værdier af $ID$. Fitt's og MacKenzie's residualer ligner hinanden rigtig meget.
+Det ses af figur \ref{fig:plot_residual_welford}, at Welford's især er dårligere ved lavere værdier af $ID$. Grunden til dette er, at Welford's ikke har det additive $a$-led. Som Welford \cite{welford1968} selv forklarer, så vil det manglende $a$-led ikke gøre stor forskel ved større værdier af $ID$. Fitt's og MacKenzie's residualer ligner hinanden rigtig meget.
 
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.5\linewidth}
