--- a/latex/main.tex
+++ b/latex/main.tex
@@ -711,7 +711,7 @@ På figur \ref{fig:plot_residual_fitt}, \ref{fig:plot_residual_welford}. \ref{fi
 
 Når vi kigger på de fire residualplot, så viser de samme resultater som AIC-analysen. Welford's residualplot viser, at modellen passer dårligt på den indsamlede data. Fitt's og MacKenzie's ligner hinanden meget, mens Meyer's er den model der giver det bedste fit til den indsamlede data.
 
-Det ses af figur \ref{fig:plot_residual_welford}, at Welford's især er dårligere ved lavere værdier af $ID$. Grunden til dette er, at Welford's ikke har det additive $a$-led. Som Welford \cite{welford1968} selv forklarer, så vil det manglende $a$-led ikke gøre stor forskel ved større værdier af $ID$. Fitt's og MacKenzie's residualer ligner hinanden rigtig meget.
+Det ses af figur \ref{fig:plot_residual_welford}, at Welford's især er dårligere ved lavere værdier af $ID$. Grunden til dette er, at Welford's ikke har det additive $a$-led. Som Welford \cite{welford1968} selv forklarer, så vil det manglende $a$-led ikke gøre stor forskel ved større værdier af $ID$. Fitt's og MacKenzie's residualer ligner hinanden.
 
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.5\linewidth}
