--- a/latex/main.tex
+++ b/latex/main.tex
@@ -707,7 +707,7 @@ Person & Meyer  & MacKenzie & Fitts  & Welford \\\hline
 \subsection*{Residualanalyse}
 For at få en ekstra vurdering af præcisionen af modellerne, har vi valgt at lave en residualanalyse. Residualerne i modellerne er variationen i $ID$ som modellerne ikke opfanger, og de kan derved sige noget om, hvor præcis modellerne er i forhold til den data vi har indsamlet.
 
-På figur \ref{fig:plot_residual_fitt}, \ref{fig:plot_residual_welford}. \ref{fig:plot_residual_mackenzie} og \ref{fig:plot_residual_meyer} ses alle fire modellers residualplot, med en blå linje defineret af en smoothing-funktion. Smoothing-funktionen er tilføjet som et visuelt hjælpemiddel der tydeligt kan vise hvordan residualerne fordeler sig omkring x-aksen. Jo mere centreret de er om aksen, og jo mere linære de er i forhold til aksen, jo bedre er modellen. Smoothing-funktionen beregner gennemsnittet af tiderne til hvert $ID$, hvor punkter under den røde linje regnes negativt, imens punkter over den røde linje beregnes positivt. Herved tegnes der en linje imellem gennemsnittene.
+På figur \ref{fig:plot_residual_fitt}, \ref{fig:plot_residual_welford}. \ref{fig:plot_residual_mackenzie} og \ref{fig:plot_residual_meyer} ses alle fire modellers residualplot, med en blå linje defineret af en smoothing-funktion. Smoothing-funktionen er tilføjet som et visuelt hjælpemiddel der tydeligt kan vise hvordan residualerne fordeler sig omkring x-aksen. Jo mere centreret de er om aksen, og jo mere linære de er i forhold til aksen, jo bedre er modellen. Smoothing-funktionen har vi ikke kunne finde præcis dokumentation for, men vi formoder, at tegner en linje imellem beregnede gennemsnit for $y$-koordinaterne til hver $x$-koordinat, med negative værdier under den røde linje og positive over.
 
 Når vi kigger på de fire residualplot, så viser de samme resultater som AIC-analysen. Welford's residualplot viser, at modellen passer dårligt på den indsamlede data. Fitt's og MacKenzie's ligner hinanden meget, mens Meyer's er den model der giver det bedste fit til den indsamlede data.
 
